--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "nodejs-complete-guide",
+  "name": "node5",
   "version": "1.0.0",
-  "description": "Complete Node.js Guide",
   "main": "app.js",
   "type": "module",
   "scripts": {
@@ -11,12 +10,13 @@
   },
   "author": "",
   "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "body-parser": "^1.20.3",
+    "ejs": "^3.1.10",
+    "express": "^4.21.0"
+  },
   "devDependencies": {
     "nodemon": "^3.1.7"
-  },
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "ejs": "^3.1.10",
-    "express": "^4.16.3"
   }
 }
